--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+#scikit-learn==0.22
+#Keras==2.3.1
 numpy==1.21.2
-scikit-learn==0.22
 opencv-python==4.5.3.56
 Pillow==8.3.1
 scikit-image==0.18.3
@@ -9,7 +10,6 @@ watchdog==2.1.5
 Pillow==8.3.1
 h5py==2.10.0
 asyncio==3.4.3
-Keras==2.3.1
 streamlit-aggrid==0.2.1
 plotly==5.3.1
 seaborn== 0.11.2
